/**
 * Enum representing the different game states
 */
export enum GameState {
    START,   // Initial state, waiting for player to start
    PLAYING, // Game is running
    GAMEOVER // Game has ended
}
